# House-Exchange-Application

./: .gitignore  CMakeLists.txt  GitHub - Shortcut.lnk  README.md  main.cpp
Controller/: MemberController.cpp
Controller/HouseController/: HouseController.cpp  HouseController.h
Controller/OldRatingController/: RatingController.cpp  RatingController.h
Controller/RatingController/: RatingController.cpp  RatingController.h
Controller/RequestController/: RequestController.cpp  RequestController.h
Controller/UserController/: UserController.cpp  UserController.h
Data/: data-test.txt  house_data.csv  user_data_backup.csv
Data/DataLoader/: DataHandler.cpp  DataHandler.h  DataLoader.cpp  DataLoader.h
Model/CustomDate/: CustomDate.cpp  CustomDate.h
Model/CustomError/: Errors.h
Model/House/: House.cpp  House.h
Model/HouseRating/: HouseRating.cpp  HouseRating.h
Model/Rating/: Rating.cpp  Rating.h
Model/Request/: Request.cpp  Request.h
Model/User/: User.cpp  User.h
Model/UserRating/: UserRating.cpp  UserRating.h
Service/: HouseService.cpp
View/: View.cpp  View.h
